--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -6,5 +6,6 @@
   "death.attack.mob": "%1$s lost the MMA match in front of %2$s",
   "death.attack.onFire": "%1$s tried to go in hell",
   "death.attack.outOfWorld": "%1$s left his soul",
-  "death.attack.outOfWorld.player": "%1$s didn't appreciate %2$s"
+  "death.attack.outOfWorld.player": "%1$s didn't appreciate %2$s",
+  "item.minecraft.music_disc_11.desc": "§6When the group chat got leaked"
 }
