new sounds and lang changes

--- a/assets/minecraft/lang/fr_ca.json
+++ b/assets/minecraft/lang/fr_ca.json
@@ -7,5 +7,6 @@
   "death.attack.onFire": "%1$s à essayé d'aller en enfer",
   "death.attack.outOfWorld": "%1$s à quitté son âme",
   "death.attack.outOfWorld.player": "%2$s n'appréciait pas %1$s",
-  "item.minecraft.music_disc_11.desc": "§6When the group chat got leaked"
+  "item.minecraft.music_disc_11.desc": "§6When the group chat got leaked",
+  "item.minecraft.music_disc_relic.desc": "§3Smurf cat"
 }
